# toelbot

./: FEATURES.md  README.md  compose.yaml  nginx.conf
auth-client/: build.gradle
auth-client/src/main/resources/: application.yaml
backend/: Dockerfile  build.gradle  compose.yaml  settings.gradle
backend/src/: Dockerfile
backend/src/main/resources/: application-prod.yaml  application.yaml
chatbot/: build.gradle
chatbot/src/main/resources/: application.yaml  mcp-servers.json
frontend/: Dockerfile  index.html  out.html  package-lock.json  package.json  vite.config.ts
frontend/public/: embed.js
frontend/src/: config.ts  main.ts
frontend/src/components/shared/: DeleteDialog.vue  FileUpload.vue  SnackBar.vue  UiParentCard.vue
frontend/src/composables/: useApi.ts  useFile.ts
frontend/src/layouts/dashboard/: DashboardLayout.vue  (+1 more)
frontend/src/plugins/: vuetify.ts
frontend/src/router/: MainRoutes.ts  PrivateRoutes.ts  PublicRoutes.ts  index.ts
frontend/src/scss/: _override.scss  _variables.scss
frontend/src/stores/: auth.ts  snackbarStore.ts
frontend/src/types/: agent.ts  ai_model.ts  chat.ts  chat_history.ts  facebook.ts  instagram.ts  mcp_server.ts  tool.ts  training_data.ts  training_size.ts  validation.ts
mcp/: google_secret.json
mcp/odoo-mcp/: .env  async_odoo_client.py  commerce.md  input.py  odoo_client.py  odoo_ecommerce.py  odoo_records.py  odoo_sales.py  pyproject.toml  sales.md  server.py  test.py
mcp/shopify/: .env.example  README.md  input.py  pyproject.toml  server.py  shopify.py
mcp/shopify-mcp-server/src/: index.ts
(+309 files in other folders)
